remove events Listener self board on game start

--- a/front/board.html
+++ b/front/board.html
@@ -34,9 +34,13 @@
     board.createBoard();
     board.createRivalBoard();
 
+    //Todo: refacto Board class
+    // remove static
+
     function testWs() {
+        board.removeEventsSelfTable();
         console.log("testWs");
-        wsConnect();
+        // wsConnect();
 
     }
 </script>
