--- a/front/board.html
+++ b/front/board.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Battleships</title>
     <link rel="stylesheet" href="board.css" type="text/css">
     <script src="board.js"></script>
@@ -13,10 +13,14 @@
 <body>
     <header>
         <div id="logo">Battleships</div>
-        <div id="messages-infos">
-            <div id="message">Place your boats</div>
+        <div id="container-message">
+            <div id="message">
+                <div id="message-text">
+                    Place your boats
+                </div>
+                <button>Rejouer</button>
+            </div>
         </div>
-
     </header>
     <div id="flex-container">
         <div id="board-container">
@@ -28,7 +32,7 @@
                 </div>
                 <div id="play-link">
                     <div>Copier le lien et l'envoyer</div>
-                    <input type="text" readonly>
+                    <span></span>
                 </div>
                 <!-- <button id="play-button" onclick="play()">Jouer</button> -->
                 <button id="play-button">Jouer</button>
