game vs ia playable (random)

--- a/front/board.html
+++ b/front/board.html
@@ -27,9 +27,10 @@
         <div id="rival-container" class="board__wait">
             <div id="play">
                 <div>
-                    <span><strong>Adversaire</strong></span>
+                    <div><strong>Adversaire</strong></div>
+                    <span><a>IA</a><a href="/">Ami</a></span>
                 </div>
-                <div id="play-link">
+                <div id="play-link" class="invisible">
                     <div>Copier le lien et l'envoyer</div>
                     <span></span>
                 </div>
