display remaining boats

--- a/front/board.html
+++ b/front/board.html
@@ -22,9 +22,61 @@
         </div>
     </header>
     <div id="flex-container">
-        <div id="board-container">
+        <div id="board-container" class="table-container">
+            <div class="boats-stats invisible">
+                <div class="boat-types">
+                    <div class="boat-type boat-type__len4">
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                        </div>
+                    </div>
+                    <div class="boat-type boat-type__len3">
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                        </div>
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                        </div>
+                    </div>
+                    <div class="boat-type boat-type__len2">
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                        </div>
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                        </div>
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                        </div>
+                    </div>
+                    <div class="boat-type boat-type__len1">
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                        </div>
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                        </div>
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                        </div>
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="rival-container" class="board__wait">
+        <div id="rival-container" class="table-container board__wait">
             <div id="play">
                 <div>
                     <div><strong>Adversaire</strong></div>
@@ -34,8 +86,59 @@
                     <div>Copier le lien et l'envoyer</div>
                     <span></span>
                 </div>
-                <!-- <button id="play-button" onclick="play()">Jouer</button> -->
                 <button id="play-button">Jouer</button>
+            </div>
+            <div class="boats-stats invisible">
+                <div class="boat-types">
+                    <div class="boat-type boat-type__len4">
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                        </div>
+                    </div>
+                    <div class="boat-type boat-type__len3">
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                        </div>
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                        </div>
+                    </div>
+                    <div class="boat-type boat-type__len2">
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                        </div>
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                        </div>
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                            <div class="boat-part"></div>
+                        </div>
+                    </div>
+                    <div class="boat-type boat-type__len1">
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                        </div>
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                        </div>
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                        </div>
+                        <div class="boat">
+                            <div class="boat-part"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
