--- a/front/board.html
+++ b/front/board.html
@@ -142,6 +142,11 @@
             </div>
         </div>
     </div>
+    <div class="board-options">
+        <div>
+            <button id="randomize-btn">Randomize</button>
+        </div>
+    </div>
 </body>
 
 <script src="game.js"></script>
