adding chat messages

--- a/front/board.html
+++ b/front/board.html
@@ -147,6 +147,11 @@
             <button id="randomize-btn">Randomize</button>
         </div>
     </div>
+    <div id="chat-container" class="invisible">
+        <input id="chat-input" type="text" placeholder="write to your opponent" onkeyup="send(event)">
+        <div id="chat-messages-list">
+        </div>
+    </div>
 </body>
 
 <script src="game.js"></script>
