--- a/front/board.html
+++ b/front/board.html
@@ -79,14 +79,14 @@
         <div id="rival-container" class="table-container board__wait">
             <div id="play">
                 <div>
-                    <div><strong>Adversaire</strong></div>
-                    <span><a>IA</a><a href="/">Ami</a></span>
+                    <div><strong>Rival</strong></div>
+                    <span><a>IA</a><a href="/">Friend</a></span>
                 </div>
                 <div id="play-link" class="invisible">
-                    <div>Copier le lien et l'envoyer</div>
+                    <div>Copy link and send to a friend</div>
                     <span></span>
                 </div>
-                <button id="play-button">Jouer</button>
+                <button id="play-button">Play</button>
             </div>
             <div class="boats-stats invisible">
                 <div class="boat-types">
